--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>localhost/about/</title><link rel="canonical" href="localhost/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=localhost/about/" /></head></html>
+<!DOCTYPE html><html><head><title>https://emma-kang.github.io/about/</title><link rel="canonical" href="https://emma-kang.github.io/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://emma-kang.github.io/about/" /></head></html>
