--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>localhost</title><link rel="canonical" href="localhost"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=localhost" /></head></html>
+<!DOCTYPE html><html><head><title>https://emma-kang.github.io</title><link rel="canonical" href="https://emma-kang.github.io"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://emma-kang.github.io" /></head></html>
