update project page

--- a/about/index.html
+++ b/about/index.html
@@ -172,7 +172,7 @@ I&rsquo;m an optimistic, responsible, and hard-working person. I&rsquo;m willing
 <li>JavaScript</li>
 <li>HTML &amp; CSS</li>
 <li>Version Control: Git, SVN(Subversion)</li>
-<li>Issure tracking tool: Jira</li>
+<li>Issue tracking tool: Jira</li>
 </ul>
 <h3 id="prior-experience"><em><strong>Prior Experience</strong></em></h3>
 <p>I have an interest in the skills but not fluent. So, I have built small project with them.</p>
